# Chronos-bare-metal

./: CMakeLists.txt  Kconfig  app.overlay  common-pinctrl.dtsi  common.cmake  prj.conf  progress.txt  sdk_config.h  sysbuild.conf  sysbuild.conf.backup  timer.code-workspace
boards/: nrf52833dk_nrf52833.overlay  nrf5340dk_nrf5340_cpuapp.conf  nrf5340dk_nrf5340_cpuapp.overlay
child_image/boards/: nrf5340_nrf5340_cpunet.overlay
child_image/ipc_radio/: prj.conf
python/src/: D2B.py  GUI.py
python/unitTests/: D2B_test.py
src/: BLE.c  BLE.h  D2B.py  GUI.py  config.h  data.c  data.h  main.c  nrf_example.h  spi.c  spi.h  timer.c  timer.h
